src/main/java/com/example/matzipbookserver/global/response/success/SuccessCode.java
package com.example.matzipbookserver.global.response.success;

import org.springframework.http.HttpStatus;

public interface SuccessCode {
    HttpStatus getHttpStatus();
    String getCode();
    String getMessage();
}