src/main/java/com/example/matzipbookserver/global/response/error/S3ErrorCode.java
package com.example.matzipbookserver.global.response.error;

public enum S3ErrorCode {
}
